--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^16.9.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-modal": "3.11.2",
     "react-scripts": "3.4.1",
+    "styled-components": "5.0.1",
     "typescript": "^3.8.3"
   },
   "scripts": {
