--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.32",
-    "@types/react": "^16.9.27",
-    "@types/react-dom": "^16.9.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "3.11.2",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "styled-components": "5.0.1",
-    "typescript": "^3.8.3"
+    "styled-icons": "10.2.1",
+    "styled-normalize": "8.0.7",
+    "typescript": "^3.8.3",
+    "url-join": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +39,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "16.9.30",
+    "@types/react-dom": "16.9.5",
+    "@types/react-router-dom": "5.1.3",
+    "@types/styled-components": "5.0.1",
+    "@types/url-join": "4.0.0"
   }
 }
